@@ -19,45 +19,33 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
 
 import com.google.common.eventbus.EventBus;
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.sql.*;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.function.Supplier;
 import javax.sql.DataSource;
 import lombok.SneakyThrows;
-import org.assertj.core.api.Assertions;
-import org.factcast.core.FactStreamPosition;
-import org.factcast.core.TestFactStreamPosition;
+import org.factcast.core.*;
 import org.factcast.core.subscription.SubscriptionRequestTO;
 import org.factcast.core.subscription.observer.*;
+import org.factcast.store.OffloadDataSource;
 import org.factcast.store.StoreConfigurationProperties;
-import org.factcast.store.internal.catchup.PgCatchup;
-import org.factcast.store.internal.catchup.PgCatchupFactory;
+import org.factcast.store.internal.catchup.*;
 import org.factcast.store.internal.filter.FromScratchCatchupLogSuppressingTurboFilter;
-import org.factcast.store.internal.listen.ConnectionModifier;
-import org.factcast.store.internal.listen.PgConnectionSupplier;
-import org.factcast.store.internal.pipeline.ServerPipeline;
-import org.factcast.store.internal.pipeline.Signal;
-import org.factcast.store.internal.query.CurrentStatementHolder;
-import org.factcast.store.internal.query.PgFactIdToSerialMapper;
+import org.factcast.store.internal.listen.*;
+import org.factcast.store.internal.pipeline.*;
+import org.factcast.store.internal.query.*;
 import org.factcast.store.internal.telemetry.PgStoreTelemetry;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Nested;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.Spy;
+import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.postgresql.util.PSQLException;
-import org.postgresql.util.ServerErrorMessage;
+import org.postgresql.util.*;
 import org.slf4j.MDC;
 import org.springframework.jdbc.datasource.SingleConnectionDataSource;
 
 @ExtendWith(MockitoExtension.class)
+@SuppressWarnings({"unused"})
 class PgFactStreamTest {
 
   @Mock PgConnectionSupplier connectionSupplier;
@@ -69,57 +57,87 @@ class PgFactStreamTest {
   @Mock PgStoreTelemetry telemetry;
   @Mock StoreConfigurationProperties props;
   @Mock SubscriptionRequestTO reqTo;
+  @Mock ModifiedSingleConnectionDataSource mds;
 
   @InjectMocks @Spy PgFactStream uut;
 
   @Nested
   class WhenConnecting {
+    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
+    Connection c;
+
+    @Mock private Statement s;
+
     @Mock SingleConnectionDataSource ds;
     @Mock PgSynchronizedQuery pgSynchronizedQuery;
     final HighWaterMark hwm = HighWaterMark.empty();
 
     @BeforeEach
     void setup() {
-      doReturn(ds).when(uut).createSingleDataSource(reqTo);
-      doReturn(pgSynchronizedQuery).when(uut).createPgSynchronizedQuery();
-      doNothing().when(uut).catchupAndFastForward(any(), any(), any());
-      doNothing().when(uut).follow(any(), any());
-      when(hwmFetcher.highWaterMark(ds)).thenReturn(hwm);
+      // doReturn(ds).when(uut).createSingleDataSource(reqTo);
+      lenient().doReturn(pgSynchronizedQuery).when(uut).createPgSynchronizedQuery();
+      // doNothing().when(uut).catchupAndFastForward(any(), any(), any());
+      lenient().doNothing().when(uut).follow(any(), any());
+      lenient().when(hwmFetcher.highWaterMark(any())).thenReturn(hwm);
+      lenient().when(connectionSupplier.dataSource()).thenReturn(ds);
+      lenient().when(reqTo.debugInfo()).thenReturn("foo");
+      lenient().when(uut.catchupConnectionModifiers(reqTo)).thenReturn(Collections.emptyList());
+      lenient().doReturn(mds).when(uut).createCatchupDataSource(ds);
     }
 
     @Test
     void catchesUpAndFollows() {
+      doNothing().when(uut).doCatchup();
+
       uut.connect();
 
       verify(telemetry).onConnect(reqTo);
       verify(uut).initializeSerialToStartAfter();
-      verify(uut).catchupAndFastForward(reqTo, hwm, ds);
+      verify(uut).doCatchup();
       verify(uut).follow(reqTo, pgSynchronizedQuery);
     }
 
+    @SneakyThrows
     @Test
     void sendsStreamInfoSignal() {
+
+      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
+          .thenReturn(
+              new PgCatchup() {
+                @Override
+                public void fastForward(long serialToStartFrom) {}
+
+                public void run() {}
+              });
+      lenient().when(uut.catchupPhaseOne(ds)).thenReturn(12L);
+
       when(reqTo.streamInfo()).thenReturn(true);
-
-      uut.connect();
-
+      uut.doCatchup();
       verify(pipeline, times(1)).process(any(Signal.FactStreamInfoSignal.class));
     }
   }
 
   @Nested
   class WhenCreatingSingleDataSource {
+    @Mock SingleConnectionDataSource ds;
+
+    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
+    Connection c;
+
+    @Mock private Statement s;
+
+    @SneakyThrows
     @Test
     void setsModifiers() {
       when(reqTo.debugInfo()).thenReturn("foo");
-      try (var ignored = uut.createSingleDataSource(reqTo)) {
-        verify(connectionSupplier)
-            .getPooledAsSingleDataSource(
-                List.of(
-                    ConnectionModifier.withCustomPlanForced(),
-                    ConnectionModifier.withAutoCommitDisabled(),
-                    ConnectionModifier.withApplicationName("foo")));
-      }
+      when(ds.getConnection()).thenReturn(c);
+      when(uut.catchupConnectionModifiers(reqTo))
+          .thenReturn(Collections.singletonList(ConnectionModifier.withCustomPlanForced()));
+
+      ModifiedSingleConnectionDataSource catchupDataSource = uut.createCatchupDataSource(ds);
+      assertThat(catchupDataSource.modifiers())
+          .isNotNull()
+          .containsExactly(ConnectionModifier.withCustomPlanForced());
     }
   }
 
@@ -130,35 +148,36 @@ class PgFactStreamTest {
 
     @BeforeEach
     void setup() {
-      lenient().doNothing().when(uut).catchup(anyLong(), any());
-      doNothing().when(uut).fastForward(any());
+      lenient().doNothing().when(uut).doCatchup();
+      lenient().when(reqTo.debugInfo()).thenReturn("foo");
+      lenient().when(hwmFetcher.highWaterMark(any())).thenReturn(hwm);
     }
 
     @Test
-    void nonEphemeralRequest() {
+    void nonEphemeralRequestCatchesUp() {
       when(reqTo.ephemeral()).thenReturn(false);
 
-      uut.catchupAndFastForward(reqTo, hwm, ds);
+      uut.connect();
 
       assertThat(uut.serial().get()).isZero();
-      verify(uut).catchup(hwm.targetSer(), ds);
+      verify(uut).doCatchup();
     }
 
     @Test
     void onlyFastForwardsOnEphemeralRequest() {
       when(reqTo.ephemeral()).thenReturn(true);
 
-      uut.catchupAndFastForward(reqTo, hwm, ds);
+      uut.connect();
 
       assertThat(uut.serial().get()).isEqualTo(hwm.targetSer());
-      verify(uut, never()).catchup(anyLong(), any());
+      verify(uut, never()).doCatchup();
     }
 
     @Test
     void signalsCatchup() {
       doReturn(true).when(uut).isConnected();
 
-      uut.catchupAndFastForward(reqTo, hwm, ds);
+      uut.connect();
 
       verify(telemetry).onCatchup(reqTo);
       verify(pipeline, times(1)).process(any(Signal.CatchupSignal.class));
@@ -221,7 +240,6 @@ class PgFactStreamTest {
     }
   }
 
-  @SuppressWarnings({"unused"})
   @Nested
   class FastForward {
 
@@ -361,7 +379,7 @@ class PgFactStreamTest {
       when(isConnectedSupplier.get()).thenReturn(true);
       when(rs.isClosed()).thenReturn(true);
 
-      Assertions.assertThatThrownBy(() -> uut.processRow(rs))
+      org.assertj.core.api.Assertions.assertThatThrownBy(() -> uut.processRow(rs))
           .isInstanceOf(IllegalStateException.class);
 
       verifyNoInteractions(factPipeline, serial, request);
@@ -420,29 +438,35 @@ class PgFactStreamTest {
     @BeforeEach
     void setup() {
       lenient().when(reqTo.debugInfo()).thenReturn("test-debug-info");
+      lenient()
+          .doReturn(HighWaterMark.of(UUID.randomUUID(), 24))
+          .when(hwmFetcher)
+          .highWaterMark(any());
+      lenient().doReturn(ds).when(connectionSupplier).dataSource();
+      lenient().doReturn(mds).when(uut).createCatchupDataSource(ds);
+      lenient().when(uut.isConnected()).thenReturn(true);
     }
 
     @Test
     void ifDisconnected_doNothing() {
       when(uut.isConnected()).thenReturn(false);
 
-      uut.catchup(0, ds);
+      uut.doCatchup();
 
       verifyNoInteractions(pgCatchupFactory);
     }
 
     @Test
     void ifConnected_catchupTwice() {
-      PgCatchup catchup1 = mock(PgCatchup.class);
-      PgCatchup catchup2 = mock(PgCatchup.class);
       when(uut.isConnected()).thenReturn(true);
-      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
-          .thenReturn(catchup1, catchup2);
+      doReturn(12L).when(uut).catchupPhaseOne(any());
+      doNothing().when(uut).catchupPhaseTwo(any(), same(12L));
+      doReturn(mds).when(uut).createCatchupDataSource(any());
+      doReturn(HighWaterMark.of(UUID.randomUUID(), 24)).when(hwmFetcher).highWaterMark(any());
+      uut.doCatchup();
 
-      uut.catchup(0, ds);
-
-      verify(catchup1, times(1)).run();
-      verify(catchup2, times(1)).run();
+      verify(uut).catchupPhaseOne(any());
+      verify(uut).catchupPhaseTwo(any(), same(12L));
     }
 
     @Test
@@ -452,8 +476,7 @@ class PgFactStreamTest {
       when(uut.isConnected()).thenReturn(true);
       when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
           .thenReturn(catchup1, catchup2);
-
-      uut.catchup(42L, ds);
+      uut.doCatchup();
 
       AtomicLong serial = uut.serial();
       verify(pgCatchupFactory)
@@ -462,7 +485,7 @@ class PgFactStreamTest {
               same(pipeline),
               same(serial),
               any(CurrentStatementHolder.class),
-              same(ds),
+              same(mds),
               eq(PgCatchupFactory.Phase.PHASE_1));
       verify(pgCatchupFactory)
           .create(
@@ -470,159 +493,149 @@ class PgFactStreamTest {
               same(pipeline),
               same(serial),
               any(CurrentStatementHolder.class),
-              same(ds),
+              same(mds),
               eq(PgCatchupFactory.Phase.PHASE_2));
-      verify(catchup2).fastForward(42L);
+
+      // or equivalent:
+      verify(uut).catchupPhaseOne(mds);
+      verify(uut).catchupPhaseTwo(ArgumentMatchers.argThat(p -> p.get() == mds), same(24L));
+
+      verify(catchup2).fastForward(24L);
     }
 
     @Test
-    @SneakyThrows
-    void usesConfiguredDataSourceOnlyForPhase1() {
-      when(p1Ds.getConnection()).thenReturn(p1Connection);
-      PgFactStream withP1DataSource =
-          spy(
-              new PgFactStream(
-                  connectionSupplier,
-                  eventBus,
-                  id2ser,
-                  pgCatchupFactory,
-                  hwmFetcher,
-                  pipeline,
-                  telemetry,
-                  props,
-                  p1Ds,
-                  reqTo));
-      PgCatchup catchup1 = mock(PgCatchup.class);
+    void phase2UsesPrimaryDataSourceAndStartsFromPhase1Highwatermark() {
+      long phase1Hwm = 123L;
+
       PgCatchup catchup2 = mock(PgCatchup.class);
-      when(withP1DataSource.isConnected()).thenReturn(true);
-      doReturn(List.<ConnectionModifier>of())
-          .when(withP1DataSource)
-          .catchupConnectionModifiers(reqTo);
-      when(hwmFetcher.highWaterMark(any(SingleConnectionDataSource.class)))
-          .thenReturn(HighWaterMark.of(UUID.randomUUID(), 17L));
-      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
-          .thenReturn(catchup1, catchup2);
+      when(pgCatchupFactory.create(
+              any(), any(), any(), any(), any(), eq(PgCatchupFactory.Phase.PHASE_2)))
+          .thenReturn(catchup2);
 
-      withP1DataSource.catchup(42L, ds);
+      doReturn(phase1Hwm).when(uut).catchupPhaseOne(any());
 
-      AtomicLong serial = withP1DataSource.serial();
-      verify(pgCatchupFactory)
-          .create(
-              same(reqTo),
-              same(pipeline),
-              same(serial),
-              any(CurrentStatementHolder.class),
-              argThat(phase1Ds -> phase1Ds != ds),
-              eq(PgCatchupFactory.Phase.PHASE_1));
-      verify(pgCatchupFactory)
-          .create(
-              same(reqTo),
-              same(pipeline),
-              same(serial),
-              any(CurrentStatementHolder.class),
-              same(ds),
-              eq(PgCatchupFactory.Phase.PHASE_2));
-      verify(hwmFetcher).highWaterMark(argThat(phase1Ds -> phase1Ds != ds));
-      verify(catchup2).fastForward(17L);
-      verify(p1Connection).close();
+      uut.doCatchup();
+
+      verify(uut)
+          .catchupPhaseTwo(
+              ArgumentMatchers.argThat(supplier -> supplier.get() == mds), eq(phase1Hwm));
     }
 
     @Test
-    @SneakyThrows
-    void appliesCatchupConnectionModifiersToConfiguredPhase1DataSource() {
-      when(p1Ds.getConnection()).thenReturn(p1Connection);
-      PgFactStream withP1DataSource =
-          spy(
-              new PgFactStream(
-                  connectionSupplier,
-                  eventBus,
-                  id2ser,
-                  pgCatchupFactory,
-                  hwmFetcher,
-                  pipeline,
-                  telemetry,
-                  props,
-                  p1Ds,
-                  reqTo));
-      ConnectionModifier modifier = mock(ConnectionModifier.class);
-      doReturn(List.of(modifier)).when(withP1DataSource).catchupConnectionModifiers(reqTo);
+    void phaseTwoForwardsToPhase1HwmThenRunsThenFfwdToInitialHwm() {
+      long phase1Hwm = 100L;
+      HighWaterMark initialHwm = HighWaterMark.of(UUID.randomUUID(), 200L);
+      PgCatchup pgCatchup2 = mock(PgCatchup.class);
 
-      SingleConnectionDataSource phase1DataSource = withP1DataSource.phase1CatchupDataSourceOr(ds);
-      phase1DataSource.destroy();
+      when(uut.isConnected()).thenReturn(true);
+      DataSource ds = mock(DataSource.class);
+      try {
+        when(ds.getConnection()).thenReturn(mock(Connection.class));
+      } catch (SQLException e) {
+        throw new RuntimeException(e);
+      }
+      when(connectionSupplier.dataSource()).thenReturn(ds);
+      doReturn(Collections.emptyList()).when(uut).catchupConnectionModifiers(any());
+      when(hwmFetcher.highWaterMark(any())).thenReturn(initialHwm);
+      when(pgCatchupFactory.create(
+              any(), any(), any(), any(), any(), eq(PgCatchupFactory.Phase.PHASE_2)))
+          .thenReturn(pgCatchup2);
+      doReturn(phase1Hwm).when(uut).catchupPhaseOne(any());
 
-      verify(modifier).afterBorrow(p1Connection);
-      verify(modifier).beforeReturn(p1Connection);
-      verify(p1Connection).close();
+      uut.doCatchup();
+
+      InOrder inOrder = inOrder(pgCatchup2, uut);
+      inOrder.verify(pgCatchup2).fastForward(phase1Hwm);
+      inOrder.verify(pgCatchup2).run();
+      inOrder.verify(uut).fastForward(initialHwm);
     }
 
-    @Test
-    @SneakyThrows
-    void phase2FastForwardsToConfiguredDataSourceHighWaterMark() {
-      when(p1Ds.getConnection()).thenReturn(p1Connection);
-      PgFactStream withP1DataSource =
-          spy(
-              new PgFactStream(
-                  connectionSupplier,
-                  eventBus,
-                  id2ser,
-                  pgCatchupFactory,
-                  hwmFetcher,
-                  pipeline,
-                  telemetry,
-                  props,
-                  p1Ds,
-                  reqTo));
-      when(withP1DataSource.isConnected()).thenReturn(true);
-      doReturn(List.<ConnectionModifier>of())
-          .when(withP1DataSource)
-          .catchupConnectionModifiers(reqTo);
-      when(hwmFetcher.highWaterMark(any(SingleConnectionDataSource.class)))
-          .thenReturn(HighWaterMark.of(UUID.randomUUID(), 12L));
+    @Nested
+    class WhenCheckingOffload {
+      @Mock OffloadDataSource offloadDataSource;
+      @Mock PgConnectionSupplier connectionSupplier;
+      @Mock EventBus eventBus;
+      @Mock PgFactIdToSerialMapper idToSerMapper;
+      @Mock PgCatchupFactory pgCatchupFactory;
+      @Mock HighWaterMarkFetcher hwmFetcher;
+      @Mock ServerPipeline pipeline;
+      @Mock PgStoreTelemetry telemetry;
+      @Mock StoreConfigurationProperties props;
+      @Mock SubscriptionRequestTO reqTo;
+      @Mock SingleConnectionDataSource ds;
+      @Mock ModifiedSingleConnectionDataSource mds;
 
-      AtomicLong phase2StartSerial = new AtomicLong(-1);
-      PgCatchup phase1 =
-          new PgCatchup() {
-            @Override
-            public void run() {
-              withP1DataSource.serial().set(7L);
-            }
+      @BeforeEach
+      void setup() {
+        lenient().when(connectionSupplier.dataSource()).thenReturn(ds);
+      }
 
-            @Override
-            public void fastForward(long serialToStartFrom) {
-              Assertions.fail("Phase 1 must not be fast-forwarded");
-            }
-          };
-      PgCatchup phase2 =
-          new PgCatchup() {
-            private long fastForward;
+      @Test
+      void phase1UsesPrimaryIfOffloadIsNull() {
+        PgFactStream uut =
+            spy(
+                new PgFactStream(
+                    connectionSupplier,
+                    null,
+                    eventBus,
+                    idToSerMapper,
+                    pgCatchupFactory,
+                    hwmFetcher,
+                    pipeline,
+                    telemetry,
+                    props,
+                    reqTo));
+        lenient().doReturn(true).when(uut).isConnected();
+        lenient().doReturn(mds).when(uut).createCatchupDataSource(any(DataSource.class));
+        lenient().when(hwmFetcher.highWaterMark(any())).thenReturn(HighWaterMark.empty());
+        lenient().doReturn(123L).when(uut).catchupPhaseOne(any());
+        lenient().doNothing().when(uut).catchupPhaseTwo(any(), anyLong());
 
-            @Override
-            public void run() {
-              phase2StartSerial.set(Math.max(withP1DataSource.serial().get(), fastForward));
-            }
+        uut.doCatchup();
 
-            @Override
-            public void fastForward(long serialToStartFrom) {
-              fastForward = serialToStartFrom;
-            }
-          };
-      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
-          .thenReturn(phase1, phase2);
+        verify(uut).catchupPhaseOne(mds);
+      }
 
-      withP1DataSource.catchup(42L, ds);
+      @Test
+      void phase1UsesOffloadIfProvided() {
+        PgFactStream uut =
+            spy(
+                new PgFactStream(
+                    connectionSupplier,
+                    offloadDataSource,
+                    eventBus,
+                    idToSerMapper,
+                    pgCatchupFactory,
+                    hwmFetcher,
+                    pipeline,
+                    telemetry,
+                    props,
+                    reqTo));
+        lenient().doReturn(true).when(uut).isConnected();
+        lenient().doReturn(mds).when(uut).createCatchupDataSource(any(DataSource.class));
+        lenient().when(hwmFetcher.highWaterMark(any())).thenReturn(HighWaterMark.empty());
+        lenient().doReturn(123L).when(uut).catchupPhaseOne(any());
+        lenient().doNothing().when(uut).catchupPhaseTwo(any(), anyLong());
 
-      assertThat(phase2StartSerial).hasValue(12L);
-      verify(p1Connection).close();
+        uut.doCatchup();
+
+        verify(uut).catchupPhaseOne(mds);
+        // Verify that createCatchupDataSource was called with offloadDataSource
+        verify(uut).createCatchupDataSource(offloadDataSource);
+      }
     }
 
     @Test
     void setsMdcDuringFromScratchCatchup() {
+      doReturn(ds).when(connectionSupplier).dataSource();
+      doReturn(mds).when(uut).createCatchupDataSource(ds);
+
       // serial is 0 by default → from scratch
       when(props.getFromScratchCatchupMinLogLevel()).thenReturn("DEBUG");
       PgCatchup catchup = mock(PgCatchup.class);
-      when(uut.isConnected()).thenReturn(true);
-      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any()))
-          .thenReturn(catchup, catchup);
+      when(pgCatchupFactory.create(any(), any(), any(), any(), any(), any())).thenReturn(catchup);
+
+      doNothing().when(uut).catchupPhaseTwo(any(), anyLong());
 
       doAnswer(
               invocation -> {
@@ -634,7 +647,7 @@ class PgFactStreamTest {
           .when(catchup)
           .run();
 
-      uut.catchup(100L, ds);
+      uut.doCatchup();
 
       assertThat(MDC.get(FromScratchCatchupLogSuppressingTurboFilter.MDC_KEY_FROM_SCRATCH))
           .isNull();
@@ -658,7 +671,7 @@ class PgFactStreamTest {
           .when(catchup)
           .run();
 
-      uut.catchup(100L, ds);
+      uut.doCatchup();
     }
 
     @Test
@@ -680,7 +693,7 @@ class PgFactStreamTest {
           .when(catchup)
           .run();
 
-      uut.catchup(100L, ds);
+      uut.doCatchup();
     }
 
     @Test
@@ -693,7 +706,7 @@ class PgFactStreamTest {
       doThrow(new RuntimeException("boom")).when(catchup).run();
 
       try {
-        uut.catchup(100L, ds);
+        uut.doCatchup();
       } catch (RuntimeException e) {
         // expected
       }
